--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/server
 
 # testing
 /coverage
@@ -13,7 +14,6 @@
 
 # misc
 .DS_Store
-./server/.env
 .env.development.local
 .env.test.local
 .env.production.local
