--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-/server
+
+# ignore all .env files globally
+*.env
+
+# ignore .env files in specific locations (optional but redundant with *.env)
+/server/.env
 
 # testing
 /coverage
 
 # production
 /build
+/server/node_modules
 
 # misc
 .DS_Store
