--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "mongoose": "^7.4.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
